<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textAlert"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure_text" />
            <Button
                android:id="@+id/noButton"
                android:background="@color/purple_200"
                android:text="@string/no"
                android:layout_below="@+id/textAlert"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp" />
            <Button
                android:id="@+id/yesButton"
                android:layout_alignParentRight="true"
                android:background="@color/purple_200"
                android:text="@string/yes"
                android:layout_marginTop="25dp"
                android:layout_alignBottom="@+id/noButton"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/textAlert"
                android:padding="0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>